# mcp-agents

./: .gitignore  README.md
basic-mcp/: README.md  main.py
frameworks_sdk/: agno_travel_planner_mcp.py  chainlit_mcp_connection.py  langchain_tool_call.py  mastra_mcp_agent.ts  openai_github_mcp_server.py  praison_airbnb_mcp_server.py  upsonic_hacker_news_mcp.py
mcp_assistant/: README.md  context.py  main.py
mcp_assistant/agents/: executor.py  planner.py
mcp_basics/: README.md  arxiv_chatbot_anthropic.ipynb  arxiv_chatbot_openai.ipynb  context.json  main.py  mcp_chatbot_v2.py  mcp_chatbot_v3.py  mcp_client.ipynb  mcp_server.ipynb  mcp_visual_information.md  prompts_and_resources.ipynb  reference_servers.ipynb  research_server.py  server_config.json
mcp_clients_py/: .gitignore
mcp_clients_py/basic_client/: client.py  main.py  pyproject.toml
mcp_robotics/: main.py  yolo_model.py
mcp_robotics/agents/: control_agent.py  perception_agent.py  perception_agent_v2.py  planning_agent.py
mcp_robotics/context/: agent.py  mcp_bus.py  mcp_message.py
mcp_servers_py/blender_expert/: .gitignore  architecture.txt  blender_expert.py  create_vector_db.py  generate_vector_db.py  pyproject.toml
mcp_servers_py/blender_expert/scripts/: blendify.py  create_vector_db.py
mcp_servers_py/blender_expert/tools/: advisor.py  knowledge_base.py  parser.py  web_resources.py
mcp_servers_py/calculator/: calculator.py  pyproject.toml
mcp_servers_py/core_concepts/: authentication.py  pyproject.toml  resources.py  server.py
mcp_servers_ts/: custom_server.ts  package.json
(+4 files in other folders)
