[project]
name = "blender-expert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "langchain-chroma>=0.1.2",
    "langchain-community>=0.3.25",
    "langchain-openai>=0.3.23",
    "langchain-text-splitters>=0.3.8",
    "mcp[cli]>=1.9.3",
    "openai>=1.86.0",
    "pypdf>=5.6.0",
    "selectolax>=0.3.30",
]
